# RustCraft

./: .gitignore  Cargo.toml  README.md  RustCraft.sln
.github/workflows/: daily-build.yml
.zed/: debug.json  settings.json
mcbe-client/plugins/: Cargo.toml  libbedrock_engine_server.dylib
mcbe-client/plugins/anticheat/: Cargo.toml
mcbe-client/plugins/anticheat/src/: lib.rs
mcbe-client/plugins/bedrock-engine-server/: Cargo.toml
mcbe-client/plugins/bedrock-engine-server/src/: lib.rs
mcbe-client/rustcraft/: Cargo.toml
mcbe-client/rustcraft/src/: data.rs  egui_dbg.rs  fps.rs  input.rs  main.rs  setup.rs  structs.rs  ui.rs  update.rs  window.rs
mcbe-client/rustcraft/src/ui/: main_menu.rs  menu_bar.rs
mcbe-server/Pumpkin/plugins/bedrock-engine-server/src/: lib.rs
